# stomp_ros

./: README.md  STOMP .py  dependencies.rosinstall  doxygen.config
.github/workflows/: ci_bionic.yml  ci_focal.yml
stomp_core/: CMakeLists.txt  package.xml
stomp_moveit/: CMakeLists.txt  package.xml  smoothing_adapter_plugins.xml
stomp_moveit/include/stomp_moveit/: stomp_optimization_task.h  stomp_planner.h
stomp_moveit/include/stomp_moveit/cost_functions/: collision_check.h  obstacle_distance_gradient.h  stomp_cost_function.h
stomp_moveit/include/stomp_moveit/noise_generators/: normal_distribution_sampling.h  stomp_noise_generator.h
stomp_moveit/include/stomp_moveit/noisy_filters/: joint_limits.h  multi_trajectory_visualization.h  stomp_noisy_filter.h
stomp_moveit/include/stomp_moveit/update_filters/: control_cost_projection.h  polynomial_smoother.h  stomp_update_filter.h  trajectory_visualization.h  update_logger.h
stomp_moveit/include/stomp_moveit/utils/: kinematics.h  polynomial.h
stomp_moveit/src/: stomp_optimization_task.cpp  stomp_planner.cpp  stomp_smoothing_adapter.cpp
stomp_moveit/src/cost_functions/: collision_check.cpp  obstacle_distance_gradient.cpp
stomp_moveit/src/noise_generators/: normal_distribution_sampling.cpp
stomp_moveit/src/noisy_filters/: joint_limits.cpp  multi_trajectory_visualization.cpp
stomp_moveit/src/update_filters/: control_cost_projection.cpp  polynomial_smoother.cpp  trajectory_visualization.cpp  update_logger.cpp
stomp_moveit/src/utils/: kinematics.cpp
stomp_plugins/: CMakeLists.txt  package.xml
stomp_plugins/include/stomp_plugins/cost_functions/: tool_goal_pose.h
stomp_plugins/include/stomp_plugins/noise_generators/: goal_guided_multivariate_gaussian.h
stomp_plugins/include/stomp_plugins/update_filters/: constrained_cartesian_goal.h
stomp_plugins/src/cost_functions/: tool_goal_pose.cpp
stomp_plugins/src/noise_generators/: goal_guided_multivariate_gaussian.cpp
stomp_plugins/src/update_filters/: constrained_cartesian_goal.cpp
