<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stomp_core</name>
  <version>0.1.1</version>
  <description>The stomp_core package.</description>
  <author>Jorge Nicho</author>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/stomp_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <depend>roscpp</depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
