<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stomp_moveit</name>
  <version>0.1.1</version>
  <description>This package wraps the STOMP planner functionality in stomp_core so that it can be used within the MoveIt Motion Planning Framework </description>
  <author>Jorge Nicho</author>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/stomp_moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>eigen</build_export_depend>

  <depend>boost</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>stomp_core</depend>
  <depend>tf</depend>
  <depend>trac_ik_lib</depend>
  <depend>visualization_msgs</depend>

  <export>
    <moveit_core plugin="${prefix}/planner_manager_plugins.xml"/>
    <moveit_core plugin="${prefix}/smoothing_adapter_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/cost_function_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/noisy_filter_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/update_filter_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/noise_generator_plugins.xml"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
