<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stomp_plugins</name>
  <version>0.1.1</version>
  <description>This package provides additional plugins that can be used by the STOMP MoveIt planner</description>
  <author>Jorge Nicho</author>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/stomp_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>rosconsole</depend>
  <depend>roslib</depend>
  <depend>stomp_core</depend>
  <depend>stomp_moveit</depend>
  <depend>xmlrpcpp</depend>

  <export>
    <stomp_moveit plugin="${prefix}/noise_generator_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/cost_function_plugins.xml"/>
    <stomp_moveit plugin="${prefix}/update_filter_plugins.xml"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
